--- a/PainelControleAndroid/app/src/main/res/layout/activity_main.xml
+++ b/PainelControleAndroid/app/src/main/res/layout/activity_main.xml
@@ -177,7 +177,7 @@
 
                         <TextView
                             android:textSize="20sp"
-                            android:text="100"
+                            android:text="-"
                             android:gravity="right"
                             android:layout_columnWeight="1"
                             android:layout_width="wrap_content"
@@ -211,8 +211,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/txtTemperature"
                             android:textSize="20sp"
-                            android:text="28C"
+                            android:text="-"
                             android:gravity="right"
                             android:layout_columnWeight="1"
                             android:layout_width="wrap_content"
