--- a/PainelControleAndroid/app/src/main/res/layout/activity_main.xml
+++ b/PainelControleAndroid/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:background="#ffffff"
             android:padding="10dp"
             app:cardUseCompatPadding="true">
@@ -44,6 +44,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/txtLightDo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -54,6 +55,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/txtLightRe"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -64,6 +66,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/txtLightMi"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -74,6 +77,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/txtLightFa"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -84,6 +88,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/txtLightSol"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -94,6 +99,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/txtLightLa"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -104,6 +110,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/txtLightSi"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -120,6 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#ffffff"
+            android:layout_marginBottom="5dp"
             android:padding="10dp"
             app:cardUseCompatPadding="true">
 
@@ -251,7 +259,7 @@
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:id="@+id/linearStatus"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -277,6 +285,7 @@
                                 android:layout_height="wrap_content" />
 
                             <TextView
+                                android:id="@+id/txtRack"
                                 android:textSize="18sp"
                                 android:gravity="center_vertical"
                                 android:drawableLeft="@drawable/ic_lock_outline"
@@ -300,6 +309,7 @@
                                 android:layout_height="wrap_content" />
 
                             <TextView
+                                android:id="@+id/txtEnergy"
                                 android:textSize="18sp"
                                 android:gravity="center_vertical"
                                 android:drawableLeft="@drawable/ic_power_plug_off"
@@ -323,6 +333,7 @@
                                 android:layout_height="wrap_content" />
 
                             <TextView
+                                android:id="@+id/txtServer"
                                 android:textSize="18sp"
                                 android:gravity="center_vertical"
                                 android:drawableLeft="@drawable/ic_power_off"
@@ -346,6 +357,7 @@
                                 android:layout_height="wrap_content" />
 
                             <TextView
+                                android:id="@+id/txtCooler"
                                 android:textSize="18sp"
                                 android:gravity="center_vertical"
                                 android:drawableLeft="@drawable/ic_fan_off"
